<resources>
    <string name="app_name">Ting\'s Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="login_button">LOGIN</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="type_email_here">Type email here</string>
    <string name="type_your_password">Type your password:</string>
    <string name="text_view">TextView</string>
    <string name="call_number">CALL NUMBER</string>
    <string name="change_picture">CHANGE PICTURE</string>

</resources>